[gd_scene load_steps=6 format=2]

[ext_resource path="res://art/planet_hud/planet_hud11.png" type="Texture" id=1]
[ext_resource path="res://script/GatewayInfoHUD.gd" type="Script" id=2]
[ext_resource path="res://scene/ChangeResourceHUD.tscn" type="PackedScene" id=3]

[sub_resource type="SpriteFrames" id=2]

animations = [ {
"frames": [  ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=1]

custom_solver_bias = 0.0
extents = Vector2( 10, 10 )

[node name="GatewayInfoHUD" type="Sprite" index="0"]

position = Vector2( -6.1742, 10.1966 )
texture = ExtResource( 1 )
script = ExtResource( 2 )

[node name="DestinationName" type="Label" parent="." index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = -39.0
margin_right = 30.0
margin_bottom = 14.0
rect_pivot_offset = Vector2( 0, 0 )
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="ResourceSent" type="AnimatedSprite" parent="." index="1"]

position = Vector2( 43.25, 4.5 )
frames = SubResource( 2 )
animation = "default"

[node name="Area2D" type="Area2D" parent="ResourceSent" index="0"]

input_pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
audio_bus_override = false
audio_bus_name = "Master"
_sections_unfolded = [ "Collision", "Pickable" ]

[node name="CollisionShape2D" type="CollisionShape2D" parent="ResourceSent/Area2D" index="0"]

position = Vector2( 0.196568, 0.221558 )
scale = Vector2( 0.4375, 0.45 )
shape = SubResource( 1 )

[node name="ChangeResourceHUD" parent="." index="2" instance=ExtResource( 3 )]

visible = false

[connection signal="input_event" from="ResourceSent/Area2D" to="." method="_on_Area2D_input_event"]


